iuroadmap.infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iuroadmap
  labels:
    name: iuroadmap
