iuroadmap.infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iuroadmap-ingress
  namespace: iuroadmap
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.iuroadmap.local
      secretName: iuroadmap-tls
  rules:
    - host: api.iuroadmap.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 4100
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /mentor
            pathType: Prefix
            backend:
              service:
                name: mentor-service
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
